7.3.5: trying to fix nav list formatting overflowing to page content

--- a/css/navigation_formatting.css
+++ b/css/navigation_formatting.css
@@ -1,11 +1,11 @@
-ul {
+ul.nav-list {
     list-style-type: none;
     margin: 0;
     padding: 0;
     background-color: #0f0f0f;
 }
 
-li a {
+li a.nav-element {
     display: block;
     width: 60px;
     text-decoration: none;
@@ -15,4 +15,5 @@ li a {
 li a:hover {
     background-color: #7373ff;
     color: black;
+    text-decoration: none;
 }
